# malthusia

./: README.md
engine/: .gitignore  README.md  compile.py  flatten.py  gsheet.py  pyproject.toml  run.py
engine/examplefuncsplayer/: bot.py
engine/exploration/: malthusia-notebook.ipynb  s.py
engine/malthusia/: stubs.py
engine/malthusia/engine/: __init__.py  config.py
engine/malthusia/engine/container/: builtins.py  code_container.py  instruction.py  instrument.py  instrument_test.py  memory.py  runner.py
engine/malthusia/engine/game/: __init__.py  commonrobot.py  constants.py  direction.py  game.py  location.py  map.py  robot.py  robottype.py  viewer.py  wanderer.py
engine/malthusia/engine/game/maps/: Hatchery.json  initial.json
engine/malthusia/engine/restrictedpython/: Eval.py  Guards.py  README.md  __init__.py  compile.py  transformer.py
ethereum/: .gitignore  README.md  hardhat.config.js  nft-metadata.json  package-lock.json  package.json
ethereum/contracts/: Malthusia.sol
ethereum/scripts/: common.mjs  create-bots.js  create-bots.mjs  deploy.js  mint-nft.js  synchronizer.mjs
server/: .gitignore  README.md  actions.sh  deploy.sh  docker-compose.yml  ethereum.py  fakedb.py  game.sh  main.py  pyproject.toml  server.sh
specs/: README.md  specs.html  specs.md
viewer/: .env.development  .env.production  deploy.sh  package-lock.json  package.json  update_contract.sh
viewer/public/: 404.html  Malthusia.json  index.html
viewer/src/: App.js  App.tsx  ControlPane.tsx  Map.js  Map.tsx  Submit.tsx  game.ts  globals.ts  index.js  index.tsx
