[tool.poetry]
name = "malthusia"
version = "0.1.0"
description = "the game runner for malthusia"
authors = ["Arvid Lunnemark <arvid.lunnemark@gmail.com>"]
license = "GNU General Public License v3.0"

[tool.poetry.dependencies]
python = ">=3.6,<3.10"
pytest = "^6.2.4"

[tool.poetry.dev-dependencies]
typer = "^0.3.2"
uncompyle6 = "^3.7.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
