[tool.poetry]
name = "server"
version = "0.1.0"
description = ""
authors = ["Arvid Lunnemark <arvid.lunnemark@gmail.com>"]
license = "GPL-3"

[tool.poetry.dependencies]
python = ">=3.9,<3.10"
fastapi = "^0.70.0"
uvicorn = {extras = ["standard"], version = "^0.15.0"}
python-dotenv = "^0.19.1"
malthusia = { path = "../engine/", develop = true }
typer = "^0.4.0"
web3 = "^5.25.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
